sort.baseball.SelectBaseball.scala.error
Erreur de compilation :
SelectBaseball:46: error: '=' expected but '(' found.
def index2pos(index:Int):Array[Int](2) = {
                                   ^SelectBaseball:52: error: illegal start of simple expression
def pos2index(pos:Array[Int](2)):Int = {
^SelectBaseball:52: error: ')' expected but '(' found.
def pos2index(pos:Array[Int](2)):Int = {
                            ^SelectBaseball:52: error: '=' expected but ')' found.
def pos2index(pos:Array[Int](2)):Int = {
                               ^SelectBaseball:184: error: illegal start of simple expression
}
^